# fintool

./: .gitignore  CLAUDE.md  Cargo.toml  QUOTE_ENHANCEMENT_SUMMARY.md  README.md  config.toml.default
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: FINANCIALREPORTS_INTEGRATION.md  HIP3-IMPLEMENTATION.md  hyperliquid.md
docs/images/: README.md
examples/backtest/: README.md  covid_crash_hedge.py  covid_crash_hedge.sh  ftx_crypto_contagion.py  ftx_crypto_contagion.sh  nvda_earnings_alpha.py  nvda_earnings_alpha.sh  svb_crypto_haven.py  ukraine_oil_shock.py  ukraine_oil_shock.sh
examples/catalyst_hedger/: README.md  bot.py  hedger_config.json
examples/funding_arb/: README.md  bot.py  bot.sh  bot_json.sh  funding_arb.sh
examples/metal_pair/: README.md  bot.py  bot.sh  bot_json.sh
examples/trading_agents/: mock_data.py  simulate.py  trading_agents.md
skills/: SKILL.md  bootstrap.sh  install.md
skills/scripts/: .gitignore  fintool
src/: backtest.rs  binance.rs  bridge.rs  cli.rs  coinbase.rs  config.rs  format.rs  hip3.rs  json_dispatch.rs  lib.rs  main.rs  okx.rs  polymarket.rs  signing.rs  unit.rs
src/commands/: balance.rs  bridge_status.rs  cancel.rs  deposit.rs  mod.rs  news.rs  options.rs  order.rs  orderbook.rs  orders.rs  perp.rs  positions.rs  predict.rs  quote.rs  report.rs  transfer.rs  withdraw.rs
tests/: buy_eth.sh  buy_hype.sh  buy_silver.sh  buy_tsla.sh  deposit.sh  e2e_trading.sh  helpers.sh  sell_eth.sh  sell_hype.sh  sell_silver.sh  show_status.sh  withdraw.sh
tests/backtest/: balance.sh  buy_spot.sh  e2e_backtest.sh  news_stub.sh  perp_buy.sh  perp_sell.sh  quote_btc.sh  quote_commodity.sh  quote_stock.sh  report_list.sh  reset.sh  sell_spot.sh
tests/binance/: buy_btc_spot.sh  buy_eth.sh  deposit.sh  e2e_trading.sh  sell_btc_spot.sh  sell_eth.sh  show_status.sh  transfer.sh  withdraw.sh
tests/human/: buy_eth.sh  buy_hype.sh  buy_silver.sh  buy_tsla.sh  deposit.sh  e2e_trading.sh  sell_eth.sh  sell_hype.sh  sell_silver.sh  show_status.sh  withdraw.sh
tests/hyperliquid/: buy_eth.sh  buy_hype.sh  buy_silver.sh  buy_tsla.sh  deposit.sh  e2e_trading.sh  sell_eth.sh  sell_hype.sh  sell_silver.sh  sell_tsla.sh  show_status.sh  withdraw.sh
tests/json/: buy_eth.sh  buy_hype.sh  buy_silver.sh  buy_tsla.sh  deposit.sh  e2e_trading.sh  sell_eth.sh  sell_hype.sh  sell_silver.sh  withdraw.sh
tests/okx/: buy_eth.sh  deposit.sh  e2e_trading.sh  sell_eth.sh  show_status.sh  transfer.sh  withdraw.sh
tests/polymarket/: buy_btc.sh  deposit.sh  predict_btc.sh  quote_btc.sh  sell_btc.sh  withdraw.sh
trading_agents/: README.md  trading_agents.py
