[package]
name = "fintool"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
colored = "2"
tabled = "0.17"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
toml = "0.8"
dirs = "6"
shellexpand = "3"
eth-keystore = "0.5"
hyperliquid_rust_sdk = { version = "0.6", default-features = false }
ethers = { version = "2", default-features = false, features = ["rustls", "eip712", "abigen", "legacy"] }
urlencoding = "2"
regex = "1"
openssl = { version = "0.10", features = ["vendored"] }
hmac = "0.12"
rmp-serde = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
